--- a/arith/rpeg/Cargo.toml
+++ b/arith/rpeg/Cargo.toml
@@ -10,3 +10,4 @@ csc411_image = "0.3.1"
 csc411_arith = "0.1.0"
 csc411_rpegio = "0.3.1"
 array2 = { path = "../array2" }
+bitpack = { path = "../bitpack" }
